--- a/views/admin/financeiro/pagamentos.njk
+++ b/views/admin/financeiro/pagamentos.njk
@@ -284,6 +284,6 @@
 {%block scripts%}
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/scripts/boletoModal.js"></script>
-<script src="/scripts/filtro.js"></script>
+<script src="/scripts/filtroPagamento.js"></script>
 
 {%endblock%}
