--- a/views/admin/gerenciamento/clientes/clientes.njk
+++ b/views/admin/gerenciamento/clientes/clientes.njk
@@ -72,12 +72,22 @@
                 </ul>
             </nav>
 
-            <div class="title table-nav">
+            <div class="title table-nav gerencia">
                 <h1>Clientes</h1>
 
                 <form class="search-form" role="search" method="POST" action="/dashboard/gerenciamento/clientes/search">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
                 </form>
+
+                <div class="filtro-contaienr">
+                        <label for="filtro">Filtrar por Status:</label>
+                        <select name="filtro" id="filtro">
+                            <option value="">Todos</option>
+                            <option value="Ativo">Ativo</option>
+                            <option value="Inativo">Inativo</option>
+                        </select>
+                </div>
+
 
                 <a href="/dashboard/cadastro/cliente" class="add">+ Cliente</a>
             </div>
@@ -105,12 +115,12 @@
             </ul>
         </div>
 
-        <div class="table">
+        <div class="table" id="cliente-list">
             
 
             {% for cliente in clientesAcademia %}
 
-                <div class="row">
+                <div class="row" data-status="{{cliente.status}}">
                 <ul>
                     {# <li>{{cliente._id}}</li> #}
                     <li>{{cliente.nome}} {{cliente.sobrenome}}</li>
@@ -149,7 +159,7 @@
 
 {# Pagination #}
 
-        {% if clientesAcademia.length > 0 %}
+        {# {% if clientesAcademia.length > 0 %}
 
             <nav class="pagination-nav">
                 <ul class="pagination-ul">
@@ -190,7 +200,7 @@
                 </ul>
             </nav>
 
-        {% endif %}
+        {% endif %} #}
 
 
 
@@ -199,5 +209,6 @@
 
 {%block scripts%}
 <script src="/scripts/flashmsg.js"></script>
+<script src="/scripts/filtroCliente.js"></script>
 
 {%endblock%}
