--- a/public/styles/gerenciamento.css
+++ b/public/styles/gerenciamento.css
@@ -197,9 +197,15 @@
     margin-bottom: 20px;
 }
 
+.table-nav.gerencia{
+
+    grid-template-columns: 1fr 3fr 2fr 1fr;
+ 
+}
+
 
 .table-nav .search-input{
-    width: 70%;
+    width: 90%;
     padding: 5px;
     border-radius: 5px;
 }
@@ -223,16 +229,25 @@
     display: flex;
     flex-direction: column;
 
-    background: url('/img/user-not-found.png');
+    background: url('/img/user-search-error.png');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: right center;
     
 }
 .not-found h2{
     font-size: 2em;
 
 }
-
+.not-found.agendamento{
+    background: url('/img/agendamento-search.png');
+    background-repeat: no-repeat;
+    background-position: right center;
+}
+.not-found.pagamento{
+    background: url('/img/pagamento-search.png');
+    background-repeat: no-repeat;
+    background-position: right;
+}
 
 
 /* agendamento search */
