--- a/views/admin/financeiro/pagamentos.njk
+++ b/views/admin/financeiro/pagamentos.njk
@@ -194,9 +194,9 @@
 
 
                                 </div>
-                                <div class="boleto__details">
+                                {# <div class="boleto__details">
                                     <div class="boleto__details__item">transação hash: {{boleto.transactionHash}}</div>
-                                </div>
+                                </div> #}
                             {% endif %}
 
                             <div class="boleto__instructions">
