--- a/public/styles/relatorios.css
+++ b/public/styles/relatorios.css
@@ -18,8 +18,9 @@
 
     background-color: whitesmoke;
     padding: 30px;
-    border-left: 3px solid teal;
-
+    
+    border-left: 5px solid teal;
+    border-radius: 5px;
     cursor: pointer;
 
     align-items: center;
