--- a/views/admin/relatorio/relatorio_financeiro.njk
+++ b/views/admin/relatorio/relatorio_financeiro.njk
@@ -1,67 +1,147 @@
 {% extends 'layout.njk' %}
 
         {% block head %}
+            <link rel="stylesheet" href="/styles/cadastro.css">
+            <link rel="stylesheet" href="/styles/table.css">
             <title>acadmin - Relatorios</title>
         {% endblock %}
     
     
        {%block menu%}
        <aside>
-        <nav class="ativo" id="left-menu">
-            <div class="logo">
-                <img src="/img/acadmin3.png" alt="Acadmin Logo">
-            </div>
-            <ul>
-                <li class="list">
-                    <a href="/dashboard">
-                        <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-                        <span class="title">Home</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="/dashboard/cadastro">
-                        <span class="icon"><ion-icon name="person-add-outline"></ion-icon></span>
-                        <span class="title">Cadastro</span>
-                    </a>
-                </li>
-                <li class="list ">
-                    <a href="/dashboard/agendamento">
-                        <span class="icon"><ion-icon name="calendar-number-outline"></ion-icon></span>
-                        <span class="title">Agendamento</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="/dashboard/gerenciamento">
-                        <span class="icon"><ion-icon name="business-outline"></ion-icon></span>
-                        <span class="title">Gerenciamento</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="/dashboard/financeiro">
-                        <span class="icon"><ion-icon name="cash-outline"></ion-icon></span>
-                        <span class="title">Financeiro</span>
-                    </a>
-                </li>
-                <li class="list active">
-                    <a href="/dashboard/relatorios">
-                        <span class="icon"><ion-icon name="folder-outline"></ion-icon></span>
-                        <span class="title">Relatorios</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="/login">
-                        <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
-                        <span class="title">Sair</span>
-                    </a>
-                </li>
-            </ul>               
-        </nav>
+            <nav class="ativo" id="left-menu">
+                <div class="logo">
+                    <img src="/img/acadmin3.png" alt="Acadmin Logo">
+                </div>
+                <ul>
+                    <li class="list">
+                        <a href="/dashboard">
+                            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                            <span class="title">Home</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="/dashboard/cadastro">
+                            <span class="icon"><ion-icon name="person-add-outline"></ion-icon></span>
+                            <span class="title">Cadastro</span>
+                        </a>
+                    </li>
+                    <li class="list ">
+                        <a href="/dashboard/agendamento">
+                            <span class="icon"><ion-icon name="calendar-number-outline"></ion-icon></span>
+                            <span class="title">Agendamento</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="/dashboard/gerenciamento">
+                            <span class="icon"><ion-icon name="business-outline"></ion-icon></span>
+                            <span class="title">Gerenciamento</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="/dashboard/financeiro">
+                            <span class="icon"><ion-icon name="cash-outline"></ion-icon></span>
+                            <span class="title">Financeiro</span>
+                        </a>
+                    </li>
+                    <li class="list active">
+                        <a href="/dashboard/relatorios">
+                            <span class="icon"><ion-icon name="folder-outline"></ion-icon></span>
+                            <span class="title">Relatorios</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="/login">
+                            <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
+                            <span class="title">Sair</span>
+                        </a>
+                    </li>
+                </ul>               
+            </nav>
         <div class="open">></div>
         </aside>
        {%endblock%}
 
             {%block content%}
-                <h1>Relatorios - Financeiro</h1>
+
+            <div class="ver-menu relatorio">
+                <ul>
+                    <li><a href="/dashboard/relatorios">Relatorios</a> ></li>
+                </ul>
+                <ul>
+                </ul>
+                <ul>
+                    <li> Relatorio Financeiro </li>
+                </ul>
+            </div>
+
+
+            <div class="form-wrapper ativo"  id="cliente">
+                <h1>Relatorios Financeiro</h1>
+
+            {% for mensagem in sucesso %}
+
+                <div class="alert-box sucesso">
+                    <p>{{mensagem}}</p>
+                    <button class="close-alert"><ion-icon name="close"></ion-icon></button>
+                </div>
+
+            {% endfor %}
+            {% for mensagem in erro %}
+
+                <div class="alert-box deleted">
+                    <p>{{mensagem}}</p>
+                    <button class="close-alert"><ion-icon name="close"></ion-icon></button>
+                </div>
+
+            {% endfor %}
+
+                <div id="error"></div>
+                <form target="_blank" action="/gerar/relatorio/financeiro" method="POST" id="form" class="cliente">
+
+                   <div class="input-wrapper">
+                        <label for="tipo">Tipo</label>
+                        <select name="tipo" id="tipo">
+                            <option value="completo">Completo</option>
+                            <option value="entradas">Entradas</option>
+                            <option value="saidas">Saidas</option>
+                        </select>
+                    </div>
+                    
+                   <div class="input-wrapper">
+                        <label for="mesInicio">Mês Inicio</label>
+                        <select name="mesInicio" id="mesInicio">
+                            <option value="01">Janeiro</option>
+                            <option value="02">Fevereiro</option>
+                            <option value="03">Março</option>
+                            <option value="04">Abril</option>
+                            <option value="05">Maio</option>
+                        </select>
+                    </div>
+
+
+                   <div class="input-wrapper">
+                        <label for="mesFim">Mês Fim</label>
+                        <select name="mesFim" id="mesFim">
+                            <option value="01">Janeiro</option>
+                            <option value="02">Fevereiro</option>
+                            <option value="03">Março</option>
+                            <option value="04">Abril</option>
+                            <option value="05">Maio</option>
+                        </select>
+                    </div>
+
+                    
+
+                    
+
+                   
+                    <button  type="submit">Gerar Relatorio</button>
+                </form>
+              
+            </div>
+
+
             {%endblock%}
 
 {%block scripts%}
