reformulando pagina de pdf do relatorio

--- a/views/admin/relatorio/relatorio_financeiro.njk
+++ b/views/admin/relatorio/relatorio_financeiro.njk
@@ -102,12 +102,23 @@
                    <div class="input-wrapper">
                         <label for="tipo">Tipo</label>
                         <select name="tipo" id="tipo">
-                            <option value="completo">Completo</option>
+                            <option value="entradasaida">Entradas e Saidas</option>
                             <option value="entradas">Entradas</option>
                             <option value="saidas">Saidas</option>
                         </select>
                     </div>
                     
+                    <div class="input-wrapper">
+                        <label for="estilo">Estilo</label>
+                        <select name="estilo" id="estilo">
+                            <option value="tabelagrafico">Tabela e Grafico</option>
+                            <option value="tabela">Tabela</option>
+                            <option value="grafico">Grafico</option>
+
+                        </select>
+                    </div>
+
+
                    <div class="input-wrapper">
                         <label for="mesInicio">Mês Inicio</label>
                         <select name="mesInicio" id="mesInicio">
@@ -130,7 +141,7 @@
                             <option value="05">Maio</option>
                         </select>
                     </div>
-
+                   
                     
 
                     
