--- a/views/admin/relatorio/financeiro/entradas.njk
+++ b/views/admin/relatorio/financeiro/entradas.njk
@@ -8,13 +8,87 @@
     <link rel="stylesheet" href="/styles/relatorioModel.css">
    <style>
 
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  /*
+    2. Remove default margin
+  */
+  * {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+  }
+  ul{
+    margin: 0;
+    padding: 0;
+  }
+  /*
+    3. Allow percentage-based heights in the application
+  */
+  html, body {
+    height: 100%;
+  }
+  /*
+    Typographic tweaks!
+    4. Add accessible line-height
+    5. Improve text rendering
+  */
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+  /*
+    6. Improve media defaults
+  */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  /*
+    7. Remove built-in form typography styles
+  */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  /*
+    8. Avoid text overflows
+  */
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  /*
+    9. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  }
+
+
+
+
+
+        .title{
+            text-align: center;
+            
+        }
+
         .finance-table{
             padding: 30px 0;
+        }
+        .finance-head{
+        
+            
         }
         .finance-table .finance-head ul{
             display: grid;
 
-            grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr;
+            grid-template-columns:  20% 20% 20% 20% 20%;
 
             width: 100%;
             background-color: #008080;
@@ -22,88 +96,136 @@
             color: white;
             border-top-left-radius: 5px ;
             border-top-right-radius: 5px;
+
         }
        
         .finance-head ul li{
             list-style: none;
 
             list-style: none;
-            padding: 10px;
 
             font-weight: bold;
 
             font-size: 1.25em;
+            padding: 10px;
 
-            /* border-right: 2px solid teal; */
 
         }
-        .finance-rows .row ul{
+
+            .finance-bottom ul li{
+                list-style: none;
+
+                list-style: none;
+
+                font-weight: bold;
+
+                font-size: 1.25em;
+            padding: 10px;
+
+            }
+         
+             .finance-bottom ul{
             display: grid;
 
-            grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr;
-            width: 100%;
-            background-color: whitesmoke;
+            grid-template-columns:  20% 20% 20% 20% 20%;
 
-            color: black;
-            border-top-left-radius: 5px ;
-            border-top-right-radius: 5px;
+            width: 100%;
+            background-color: #008080;
+
+            color: white;
+            border-bottom-left-radius: 5px ;
+            border-bottom-right-radius: 5px;
+
         }
+       
+        
+
+
+
         .finance-rows .row ul li{
             list-style: none;
-            padding: 10px;
             
             font-size: 1.125em;
             
-        /* 
-            border-right: 2px solid teal; */
+            padding: 10px;
+            border: 1px solid black;
+            
         }
 
         .finance-rows .row ul li .icon{
             font-size: 1.5em;
         }
 
+        .row ul {
+        display: grid;
+        grid-template-columns:  20% 20% 20% 20% 20%;
+        width: 100%;
+        background-color: white;
+        color: black;
+    }
+   
+    h2{
+        padding-top: 30px;
+    }
+
 
    </style>
 </head>
 <body>
     
-    <h1>Relatorio financeiro Entradas</h1>
-
-
-    {% if dadosEntrada.length > 0 %}
+    <h1 class="title">Relatorio Financeiro</h1>
+    {% if boletoMeses.length > 1 %}
+        {% set ultimoMes = boletoMeses.length - 1 %}
+        <h2 >Entradas Entre o mês de {{boletoMeses[0].mes}} e {{boletoMeses[ultimoMes].mes}} </h2>
+    {% endif %}
 
         <div class="finance-table">
 
             <div class="finance-head">
                      <ul>
-                        <li>Cliente <div class="filter-desc"></div></li>
-                        <li>Valor<div class="filter-valor"></div></li>
-                        <li>Data Pagamento <div class="filter-data"></div></li>
-                        <li>Tipo <div class="filter-tipo"></div></li>
-                        <li></li>
+                        <li>Mês <div class="filter-desc"></div></li>
+                        <li>Tipo<div class="filter-valor"></div></li>
+                        <li>Quantidade <div class="filter-data"></div></li>
+                        <li>Valor <div class="filter-tipo"></div></li>
+                        <li>Total</li>
                 </ul>
             </div>
 
+
                 <div class="finance-rows">
-                    {% for entrada in dadosEntrada %}
+                    {% set qtd = 0 %}
+                    {% set total = 0 %}
+                    {% set valor = 0 %}
+                    {% set meses = 0 %}
 
-                        <div class="row">
-                            <ul>
-                                <li>{{entrada.clienteNome}}</li>
-                                <li><span class="cifrao">R$</span> {{entrada.valor}}</li>
-                                <li>{{entrada.dataPagamento}}</li>
-                                <li>{{entrada.tipo}}</li>
-                                  
-                            </ul>
-                        </div>
+                    {% for boleto in boletoMeses %}
+                    <div class="row">
+                        <ul>
+                            <li>{{boleto.mes}}</li>
+                            <li>{{boleto.tipo}}</li>
+                            <li>{{boleto.quantidade}}</li>
+                            <li>R$ {{boleto.valor}}</li>
+                            <li>R$ {{boleto.valorTotal}}</li>
+                        </ul>
+                     </div>
+                    {% set qtd = qtd + boleto.quantidade %}
+                    {% set total = total + boleto.valorTotal%}
+                    {% set valor = valor + boleto.valor %}
+                    {% set meses = meses + 1 %}
                     {% endfor %}
-                         
-                    
                 </div>
-    </div>
+                    {% set valorMedio = valor / meses %}
 
-    {% endif %}
-    
-        
+                <div class="finance-bottom">
+                     <ul>
+                        <li>Em {{meses}} meses<div class="filter-desc"></div></li>
+                        <li>{{boletoMeses[0].tipo}}<div class="filter-valor"></div></li>
+                        <li>{{qtd}} <div class="filter-data"></div></li>
+                        <li>R$ {{valorMedio}}<div class="filter-tipo"></div></li>
+                        <li>R$ {{total}}</li>
+                </ul>
+            </div>
+
+    </div>
 </body>
 </html>
